...
                            ),
                            TextFormField(
                              controller: _emailOrPhoneController,
                              autovalidateMode:
                                  AutovalidateMode.onUserInteraction,
                              focusNode: _emailFocusNode,
                              key: Key('emailField'),
                              decoration: InputDecoration(
                                hintText: 'Enter your email id',
                                filled: true,
                                fillColor: Colors.white,
                                border: OutlineInputBorder(
                                  borderRadius: BorderRadius.circular(30.0),
...
                            TextFormField(
                              controller: _emailPasswordController,
                              obscureText: _obscureTextemail,
                              autovalidateMode:
                                  AutovalidateMode.onUserInteraction,
                              focusNode: _passwordFocusNode,
                              key: Key('passwordField'),
                              decoration: InputDecoration(
                                hintText: 'Password',
                                filled: true,
                                suffixIcon: IconButton(
                                  icon: Icon(_obscureTextemail
                                      ? Icons.visibility_off
...
